docs(45): the outcome -- nine branches green, and the warning gone from every result file
Records section 45.7: the pre-change tip and post-change tip for all nine branches, the
per-band executed/failed counts, and the reset --hard targets that reverse it while it
stays unpushed. Every count is +4 on that branch's own pre-section-45 figure, which is
the guard's four tests and nothing else.

Also marks R14 closed in the risk register and the carried-debt list, and states plainly
that the remedy R14 was first recorded with -- -XX:+EnableDynamicAgentLoading -- is wrong
and must not be re-added: it is compared against a warning string at step 3 of
PremainAttachAccess and never reaches the self-attaching call at step 4.

Corrects the vs-origin status row, which claimed every branch was ahead by exactly 1
while the true count was already 2. Measured with git rev-list --left-right --count,
not carried forward. That row is the fifth edition of this file to describe a status
that had already changed.

This is a DOCS-ONLY commit, which reaches no band on its own (Phase 21) -- TODO.md is one
blob across all nine branches and stays that way only by being carried by hand.

Backport-of: 531122a3a